# P.Y.T.A

./: .commitlintrc.json  .gitignore  Jenkinsfile  LICENSE  bun.lockb  commitlint.config.js  compose.yml  github-actions-docker.yml  package-lock.json  package.json  pyproject.toml  readme.md  run.sh
.github/workflows/: backend-tests-pr.yml  backend-tests_pr.yml  github-actions-docker.yml
.husky/: pre-commit
Bruno/: Register_endpoint.bru
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  report.html
backend/app/: database.py  main.py
backend/app/core/: exceptions.py  logger.py  settings.py
backend/app/core/constants/: time.py
backend/app/core/enums/: time_unit.py
backend/app/core/models/: __init__.py  auth.py  base_model.py  base_table.py  company.py  exchange.py  industry.py  portfolio.py  role.py  session.py  stock_history.py  transaction.py  user.py
backend/app/core/schemas/: exchange.py  industry.py  portfolio_out.py  session_out.py  stock_buy.py  stock_buy_out.py  stock_details.py  stock_list.py  stock_list_order.py  stock_order.py  stock_order_out.py  stock_prices.py  transaction_out.py  user_login.py  user_out.py  user_register.py
backend/app/core/simulation/: simulator.py
backend/app/core/translate/: translator.py
backend/app/core/utils/: datetime_utils.py  init_db.py  model_utils.py  portfolio_utils.py  querying_utils.py  translation_utils.py
backend/app/core/utils/query/: auth_utils.py  stock_utils.py  user_utils.py
backend/app/lang/en/: industry.py
backend/app/lang/pl/: industry.py
backend/app/v1/: __init__.py
backend/app/v1/auth/: __init__.py  auth.py  auth_router.py  stocks.py
backend/app/v1/exchanges/: exchanges_router.py
backend/app/v1/industries/: industries_router.py
backend/app/v1/stocks/: stocks.py  stocks_router.py
backend/app/v1/user/: __init__.py  user_router.py
backend/datasets/: company.json  exchange.json  industry.json
backend/pyta-requests/: TEST.bru  bruno.json
backend/scripts/: company_preprocessing.py  coverage.sh
backend/tests/: conftest.py  dummy_test.py  exchanges_test.py  industries_test.py  login_test.py  logout_test.py  order_test.py  portfolio_test.py  register_test.py  stock_prices_test.py  stocks_test.py  translation_test.py  user_test.py
bruno/: Login.bru  Logout.bru  Register_endpoint.bru  User.bru  bruno.json  buy_stock.bru  collection.bru  get_exchanges.bru  get_industries.bru  get_portfolio.bru  get_stock_details.bru  get_stock_list.bru  get_transactions.bru  me.bru  register.bru  sell_stock.bru  stock_prices.bru
frontend/: .dockerignore  .env.example  Dockerfile  biome.json  bun.lockb  cypress.config.ts  next.config.ts  package-lock.json  package.json
frontend/__test__/: currency.test.tsx  debounce.test.tsx  footer.test.tsx  header.test.tsx
frontend/cypress/e2e/: 02-login.cy.ts  internationalization.cy.ts  login.cy.ts  main.cy.ts  register.cy.ts  theme.cy.ts
frontend/cypress/fixtures/: stocks.json  user.json
frontend/messages/: en.json  pl.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/_components/: BarMenu.tsx  Footer.tsx  Header.tsx  HomePageLayout.tsx  InfiniteScroll.tsx  LocaleSwitcher.tsx  LocaleSwitcherSelect.tsx  ModeToggle.tsx  MyTooltip.tsx  PytaLogo.tsx  QueryProvider.tsx  SelectParam.tsx  ThemeProvider.tsx  UserAvatarMenu.tsx  UserProvider.tsx
frontend/src/app/[locale]/_components/StockTable/: StockCell.tsx  StockColumnHeader.tsx  StockRow.tsx  StockTable.tsx  useColumns.tsx
frontend/src/app/[locale]/auth/: layout.tsx  page.tsx
frontend/src/app/[locale]/auth/_components/: AuthLayout.tsx  DatePicker.tsx  PasswordInput.tsx  PrivacyToggler.tsx  SignInForm.tsx  SignUpForm.tsx
frontend/src/app/[locale]/auth/sign-in/: page.tsx
frontend/src/app/[locale]/auth/sign-up/: page.tsx
frontend/src/app/[locale]/portfolio/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/auth/_components/: AuthLayout.tsx  SignInForm.tsx
frontend/src/components/ui/: dropdown-menu.tsx  sonner.tsx
frontend/src/data/: chart-options.ts  selects.ts
frontend/src/hooks/: use-toast.ts  useFormatCurrency.ts
frontend/src/i18n/: request.ts  routing.ts
frontend/src/lib/: regex.ts
frontend/src/query/: auth.ts  exchange.ts  http.ts  industry.ts  portfolio.ts  stock-details.ts  stocks.ts  transaction.ts
frontend/src/store/: search-params.ts  userStore.ts
frontend/src/types/: api-requests.ts  api-responses.ts  stocks.ts  user.ts
frontend/src/ws/: index.ts  price-handler.ts  ticker-update.ts
(+9 files in other folders)
